src/test/deca/syntax/invalid/testExtend2.deca
// test Invalid extend
// Result : Error
// extends an invalid class name.
class C extends #{

}
